HTML - Wrapped custom tip label in a div to avoid a label wrapping multiple inputs

--- a/src/styles.css
+++ b/src/styles.css
@@ -45,7 +45,7 @@
   }
 
   /* CHECKED CUSTOM AMOUNT DISPLAY STYLING */
-  label.input-container:has(#customTip:checked) {
+  .input-container:has(#customTip:checked) {
     p {
       @apply hidden;
     }
